Implement tenders manipulation logic